Additional change - seeing if local workspace folder sticks

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,5 @@
     },
     "forwardPorts": [3000],
     "postCreateCommand": "",
-    "remoteUser": "node",
-    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/next-app,type=bind",
-    "workspaceFolder": "/workspaces/next-app"
+    "remoteUser": "node"
 }
