--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 {
     "name": "Next.js Project",
     "build": {
-        "dockerfile": "Dockerfile"
+        "dockerfile": "Dockerfile",
+        "args": {
+            "PROJECT_NAME": "${localWorkspaceFolderBasename}"
+        }
     },
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
@@ -25,12 +28,12 @@
                 "editor.formatOnSave": true,
                 "editor.defaultFormatter": "esbenp.prettier-vscode",
                 "editor.codeActionsOnSave": {
-                    "source.fixAll.eslint": true
+                    "source.fixAll.eslint": "explicit"
                 }
             }
         }
     },
     "forwardPorts": [3000],
-    "postCreateCommand": "",
+    "postCreateCommand": "if [ ! -f package.json ] || ! grep -q 'next' package.json; then npx create-next-app@latest . --yes --typescript --eslint --tailwind --src-dir --import-alias '@/*' --app --turbopack; fi && npm update && npm install eslint@latest eslint-config-next@latest",
     "remoteUser": "node"
 }
