--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -34,6 +34,6 @@
         }
     },
     "forwardPorts": [3000],
-    "postCreateCommand": "if [ ! -f package.json ] || ! grep -q 'next' package.json; then npx create-next-app@latest . --yes --typescript --eslint --tailwind --src-dir --import-alias '@/*' --app --turbopack; fi && npm update && npm install eslint@latest eslint-config-next@latest",
+    "postCreateCommand": "if [ ! -f package.json ] || ! grep -q 'next' package.json; then npx create-next-app@latest next-app --yes --typescript --eslint --tailwind --src-dir --import-alias '@/*' --app --turbopack; fi && npm update && npm install eslint@latest eslint-config-next@latest",
     "remoteUser": "node"
 }
