Made another change - (never not it seems like)

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,6 +6,7 @@
             "PROJECT_NAME": "${localWorkspaceFolderBasename}"
         }
     },
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}/next-app",
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
         "ghcr.io/devcontainers/features/git:1": {},
