--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,6 @@
             "PROJECT_NAME": "${localWorkspaceFolderBasename}"
         }
     },
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}/next-app",
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
         "ghcr.io/devcontainers/features/git:1": {},
@@ -36,5 +35,6 @@
     },
     "forwardPorts": [3000],
     "postCreateCommand": "if [ ! -f package.json ] || ! grep -q 'next' package.json; then npx create-next-app@latest next-app --yes --typescript --eslint --tailwind --src-dir --import-alias '@/*' --app --turbopack; fi && npm update && npm install eslint@latest eslint-config-next@latest",
-    "remoteUser": "node"
+    "remoteUser": "node",
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}/next-app"
 }
