Additionals - giving permisssions to remoteUser

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,11 @@ ARG PROJECT_NAME=next-app
 # Set environment variables
 ENV NODE_ENV=development
 ENV PROJECT_FOLDER=/workspaces/${PROJECT_NAME}/next-app
-RUN mkdir -p ${PROJECT_FOLDER}
+
+# Create directory and set permissions
+RUN mkdir -p ${PROJECT_FOLDER} && \
+    chown -R node:node /workspaces && \
+    chmod -R 755 /workspaces
 
 # Install only the necessary libraries
 RUN apt-get update && apt-get install -y \
