one more just for fun

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,7 @@ ARG PROJECT_NAME=next-app
 
 # Set environment variables
 ENV NODE_ENV=development
-ENV PROJECT_FOLDER=/workspaces/${PROJECT_NAME}/next-app
+ENV PROJECT_FOLDER=/workspaces/${PROJECT_NAME}
 
 # Install only the necessary libraries
 RUN apt-get update && apt-get install -y \
