--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,5 +36,5 @@
     "forwardPorts": [3000],
     "initializeCommand": "npm update",
     "remoteUser": "node",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}/next-app"
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
 }
