trying a different build case out - let's see if this works

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,11 +1,10 @@
 FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm
 
-# Add an ARG for the project name with a default value
-ARG PROJECT_NAME=next-app
-
+# Add an ARG for the project name using localWorkspaceFolderBasename
+ARG PROJECT_NAME=${localWorkspaceFolderBasename}
 # Set environment variables
 ENV NODE_ENV=development
-ENV PROJECT_FOLDER=/workspaces/${PROJECT_NAME}
+ENV PROJECT_FOLDER=/workspaces/${PROJECT_NAME}/next-app
 
 # Install only the necessary libraries
 RUN apt-get update && apt-get install -y \
