--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,27 +13,12 @@
     },
     "customizations": {
         "vscode": {
-            "extensions": [
-                "dbaeumer.vscode-eslint",
-                "esbenp.prettier-vscode",
-                "ms-azuretools.vscode-docker",
-                "saoudrizwan.claude-dev",
-                "Continue.continue",
-                "bradlc.vscode-tailwindcss",
-                "csstools.postcss",
-                "prisma.prisma",
-                "formulahendry.auto-rename-tag"
-            ],
             "settings": {
                 "editor.formatOnSave": true,
-                "editor.defaultFormatter": "esbenp.prettier-vscode",
-                "editor.codeActionsOnSave": {
-                    "source.fixAll.eslint": "explicit"
-                }
+                "editor.defaultFormatter": "esbenp.prettier-vscode"
             }
         }
     },
-    "forwardPorts": [3000],
     "onCreateCommand": "cd next-app && npm install",
     "postStartCommand": "cd next-app && npm update",
     "remoteUser": "node",
