--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,26 +1,12 @@
 {
     "name": "Next.js Project",
     "build": {
-        "dockerfile": "Dockerfile",
-        "args": {
-            "PROJECT_NAME": "${localWorkspaceFolderBasename}"
-        }
+        "dockerfile": "Dockerfile"
     },
     "features": {
         "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {},
         "ghcr.io/devcontainers/features/git:1": {},
         "ghcr.io/devcontainers/features/github-cli:1": {}
     },
-    "customizations": {
-        "vscode": {
-            "settings": {
-                "editor.formatOnSave": true,
-                "editor.defaultFormatter": "esbenp.prettier-vscode"
-            }
-        }
-    },
-    "onCreateCommand": "cd next-app && npm install",
-    "postStartCommand": "cd next-app && npm update",
-    "remoteUser": "node",
-    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}"
+    "onCreateCommand": "cd next-app && npm install"
 }
